add initial models and beans for Chinook database small refactoring of asDate() method added preliminary LocalDate and LocalDateTime support a few small refactorings